# project-visindi

./: .template-gitignore  LICENSE.md  LICENSE.md.sig  README.md  README.md.sig  proj_visindi_requirements.txt
00--copyright_and_licensing/: LICENSE.BSL.md  LICENSE.MPL-2.0.txt  LICENSE.MPL-2.0.txt.sig
04--app_source_code/drsf/: BASE_MANIFEST.in  README.md  README.md.sig  app_drsf-requirements.txt  app_drsf_requirements.txt  pyproject.toml  setup.cfg  setup.py
04--app_source_code/drsf/src/drsf/: __init__.py  drsf.py  drsf_core_config.py  drsf_doc_processor.py  drsf_doc_processor_helpers.py  drsf_entry.py  drsf_graph_helpers.py  drsf_init_config.py
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_dev_notebook_1/: app_drsf-requirements.txt  drsf_config_v0.2.toml  drsf_dev_notebook_1.ipynb
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_dev_notebook_1/00-drsf_entry_markdown_templates/: ae_template.md  det_sig_template.md  mit_ctrl_template.md
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_dev_notebook_1/00-drsf_source_docs_template_dir/: README.md
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_dev_notebook_1/00-drsf_source_docs_template_dir/P2--drsf_entries/C1--drsf_graph/: drsf_graph.md
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_dev_notebook_1/00-drsf_source_docs_template_dir/P2--drsf_entries/C2--adverse_events/: adverse_events_intro.md
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_v0.2_dev_notebook_1/: drsf_v0.2_dev_notebook_2.ipynb
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_v0.2_dev_notebook_1/00-drsf_entry_markdown_templates/: threat_template.md
04--app_source_code/drsf/tools/00--drsf_codebase_dev_notebooks/drsf_v0.2_dev_notebook_1/00-drsf_source_docs_template_dir/: intro.md
04--app_source_code/drsf/tools/01--drsf_workbench_prod/: 00-drsf_base_config_mappings.json  drsf_workbench.ipynb
04--app_source_code/drsf/tools/01--drsf_workbench_prod/00-drsf_source_docs_template_dir/: _config.yml
04--app_source_code/drsf/tools/01--drsf_workbench_prod/00-drsf_source_docs_template_dir/P5--licenses_and_citations/: licenses_and_citations_intro.md
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/: drsf_workbench_demo.ipynb
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/00-drsf_entry_markdown_templates/: attack_template.md  mit_ctrl_imp_template.md
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/00-drsf_source_docs_template_dir/: _toc.yml
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/00-drsf_source_docs_template_dir/01-content_files/: .gitkeep  README.md
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/00-drsf_source_docs_template_dir/P3--response_playbooks/: response_playbooks_intro.md
04--app_source_code/drsf/tools/02--drsf_workbench_prod_demo/00-drsf_source_docs_template_dir/P4--reference_resources/: reference_resources_intro.md
(+11 files in other folders)
