#                 COPYRIGHT & LICENSE TERMS NOTICE
# =============================================================================
# All following code and content is © 2024 Ross Blair,
# and falls under the licensing terms of Ross Blair's
# derivative of the Business Source License \(BSL\).
# The precise license and warranty terms of the BSL can be found in the file 
# `LICENSE.BSL.md`, which should have been distributed
# along with this code file.  All other use of original-work code and content
# falling outside of this BSL license is prohibited.
# =============================================================================

#               PYTHON PACKAGE BUILD-SYSTEM FILE
# -----------------------------------------------------------------------------
# This file specifies the build system that will be relied on to build this
# project's application source code into a Python package.
# -----------------------------------------------------------------------------

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"