#                 COPYRIGHT & LICENSE TERMS NOTICE
# =============================================================================
# All following code and content is © 2024 Ross Blair,
# and falls under the licensing terms of Ross Blair's
# derivative of the Business Source License \(BSL\).
# The precise license and warranty terms of the BSL can be found in the file 
# `LICENSE.BSL.md`, which should have been distributed
# along with this code file.  All other use of original-work code and content
# falling outside of this BSL license is prohibited.
# =============================================================================

#               PYTHON PACKAGE BUILD-SYSTEM FILE
# -----------------------------------------------------------------------------
# This file specifies the configurations that the specified-build-system will
# parse in order to ensure proper installation of dependencies, etc. when
# building this project's application source code into a Python package.
# -----------------------------------------------------------------------------

[metadata]
name = drsf
version = 0.1.0
author = © 2024 Ross Blair
description = A program for generating Detection & Response Framework (DRSF) data structures and documentation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = Business Source License
license_files = 
    ../LICENSE.md
    ../00--copyright_and_licensing/*


[options]
install_requires =
    jupyter-book
    networkx
    plotly
    python-frontmatter
    numpy
    scipy
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src
include = drsf
